freest/test/prog/Invalid/Typing/TypeMismatchList/TypeMismatchList.fst
module TypeMismatchList where

foo : Int -> Int
foo [] = 1